--- a/Português/index.html
+++ b/Português/index.html
@@ -426,6 +426,425 @@
         </script>
 
         </section>
+
+        <section>
+
+        <!-- Aula 01 - Substantivo, Adjetivo, Numeral, Artigo, Advérbio, Pronomes, Interjeição.pdf -->
+
+        <h2>Aula 01 - Substantivo, Adjetivo, Numeral, Artigo, Advérbio, Pronomes, Interjeição.pdf</h2>
+
+        <h3>📌 CLASSES VARIÁVEIS VS INVARIÁVEIS</h3>
+
+        <h4>Variáveis (flexionam em gênero/número):</h4>
+        <ul>
+            <li>Substantivo</li>
+            <li>Adjetivo</li>
+            <li>Numeral</li>
+            <li>Pronome</li>
+            <li>Verbo</li>
+        </ul>
+
+        <h4>Invariáveis (não flexionam):</h4>
+        <ul>
+            <li>Advérbio</li>
+            <li>Conjunção</li>
+            <li>Preposição</li>
+        </ul>
+
+        <hr>
+
+        <h3>1. SUBSTANTIVO</h3>
+        <p><strong>Definição:</strong> Nomeia seres, coisas, sentimentos, ações.</p>
+
+        <h4>Classificações:</h4>
+        <ul>
+            <li><strong>Primitivo:</strong> Não deriva de outra palavra (pedra, mulher)</li>
+            <li><strong>Derivado:</strong> Deriva de primitiva (pedreiro, mulherão)</li>
+            <li><strong>Simples:</strong> Um só radical (homem, arco)</li>
+            <li><strong>Composto:</strong> Dois ou mais radicais (homem-bomba, arco-íris)</li>
+            <li><strong>Comum:</strong> Designa espécie (mulher, cidade)</li>
+            <li><strong>Próprio:</strong> Designa indivíduo específico (Maria, Paris)</li>
+            <li><strong>Concreto:</strong> Existe por si (pedra, Deus, fada)</li>
+            <li><strong>Abstrato:</strong> Ação/qualidade (criação, coragem)</li>
+            <li><strong>Coletivo:</strong> Pluralidade de seres (tropa, cardume)</li>
+        </ul>
+
+        <h4>Gênero:</h4>
+        <ul>
+            <li><strong>Biformes:</strong> Lobo/loba, capitão/capitã</li>
+            <li><strong>Uniformes:</strong>
+                <ul>
+                    <li><strong>Epicenos:</strong> Só um gênero para animais (a águia, o gavião)</li>
+                    <li><strong>Sobrecomuns:</strong> Uma forma para pessoas (a criança, o cônjuge)</li>
+                    <li><strong>Comuns de dois gêneros:</strong> O/A chefe, O/A cliente</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h4>Formação:</h4>
+        <ul>
+            <li><strong>Derivação sufixal:</strong> pescar → pescaria</li>
+            <li><strong>Derivação regressiva:</strong> cantar → canto</li>
+            <li><strong>Nominalização:</strong> verbos com formas nominais (fazer → feito)</li>
+            <li><strong>Derivação imprópria:</strong> artigo substantiva qualquer classe ("O <strong>fazer</strong> é melhor")</li>
+        </ul>
+
+        <h4>Plural:</h4>
+        <ul>
+            <li><strong>Geral:</strong> +S (carros, meninas)</li>
+            <li><strong>Terminação -ão:</strong> vão → vãos/vães/vões
+                <ul>
+                    <li>Exceções: mãos, irmãos, órgãos (+S)</li>
+                    <li>Alemães, capelães (+ES)</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h4>Plural de Compostos:</h4>
+        <ul>
+            <li><strong>Regra geral:</strong> "quem varia varia"
+                <ul>
+                    <li>Substantivo+Substantivo: couves-flores</li>
+                    <li>Numeral+Substantivo: quartas-feiras</li>
+                </ul>
+            </li>
+            <li><strong>Invariáveis não variam:</strong>
+                <ul>
+                    <li>Verbo+Subst: beija-flores</li>
+                    <li>Advérbio+Adj: alto-falantes</li>
+                </ul>
+            </li>
+            <li><strong>Exceções importantes:</strong>
+                <ul>
+                    <li>Guarda-chuva (verbo) → guarda-chuvas</li>
+                    <li>Guarda-florestal (substantivo) → guardas-florestais</li>
+                    <li>Mal-estar → mal-estares</li>
+                    <li>Arco-íris → arcos-íris</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h4>Grau:</h4>
+        <ul>
+            <li><strong>Diminutivo:</strong> -inho, -zinho (animais → animaizinhos)</li>
+            <li><strong>Aumentativo:</strong> -ão, -alhão (amigo → amigalhão)
+                <ul>
+                    <li>Exceção: pata → <strong>patorra</strong> (não "pataca")</li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h3>2. ADJETIVO</h3>
+        <p><strong>Definição:</strong> Classe variável que qualifica substantivo.</p>
+
+        <h4>Classificações:</h4>
+        <ul>
+            <li><strong>Simples:</strong> Um radical (literário)</li>
+            <li><strong>Composto:</strong> Dois radicais (luso-americano)</li>
+            <li><strong>Primitivo:</strong> Não derivado (bom)</li>
+            <li><strong>Derivado:</strong> De outra palavra (bondoso)</li>
+            <li><strong>Explicativo:</strong> Característica inerente (mortal)</li>
+            <li><strong>Restritivo:</strong> Característica não própria (valente)</li>
+            <li><strong>Gentílico:</strong> Relativo a povos (israelita)</li>
+            <li><strong>Pátrio:</strong> Relativo a lugares (israelense)</li>
+        </ul>
+
+        <h4>Adjetivos Pátrios comuns:</h4>
+        <ul>
+            <li><strong>-ês:</strong> português, inglês</li>
+            <li><strong>-ano:</strong> americano, africano</li>
+            <li><strong>-ense:</strong> fluminense, amazonense</li>
+            <li><strong>-ão/-eiro:</strong> brasileiro, mineiro</li>
+        </ul>
+
+        <h4>Plural de Compostos:</h4>
+        <ul>
+            <li><strong>Regra:</strong> Apenas o segundo varia (luso-americanos)</li>
+            <li><strong>Exceções invariáveis:</strong>
+                <ul>
+                    <li>Adjetivo+Substantivo: amarelo-ouro</li>
+                    <li>Azul-marinho, zero-quilômetro</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h4>Ordem Substantivo + Adjetivo:</h4>
+        <ol>
+            <li><strong>Não muda sentido:</strong> cão bom / bom cão</li>
+            <li><strong>Muda sentido:</strong>
+                <ul>
+                    <li>candidato pobre (sem dinheiro) / pobre candidato (coitado)</li>
+                    <li>grande homem (moral) / homem grande (físico)</li>
+                </ul>
+            </li>
+            <li><strong>Muda classe:</strong> alemão comunista (alemão que é comunista) / comunista alemão (comunista da Alemanha)</li>
+        </ol>
+
+        <h4>Locuções Adjetivas:</h4>
+        <p>Preposição + Substantivo = Adjetivo</p>
+        <ul>
+            <li>Sem coragem = covarde</li>
+            <li>De anjo = angelical</li>
+            <li>De lua = lunar</li>
+        </ul>
+
+        <h4>Grau:</h4>
+        <ul>
+            <li><strong>Comparativo:</strong>
+                <ul>
+                    <li>Superioridade: mais...que</li>
+                    <li>Inferioridade: menos...que</li>
+                    <li>Igualdade: tão...quanto</li>
+                    <li>Sintético: melhor, pior, maior (já traz "mais" embutido)</li>
+                </ul>
+            </li>
+            <li><strong>Superlativo:</strong>
+                <ul>
+                    <li><strong>Relativo:</strong> o melhor do mundo (comparado a outros)</li>
+                    <li><strong>Absoluto:</strong>
+                        <ul>
+                            <li>Analítico: muito esforçado</li>
+                            <li>Sintético: dificílimo, ótimo</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h3>3. PRONOME</h3>
+
+        <h4>Interrogativos:</h4>
+        <p>Que, quem, qual, quantos</p>
+        <ul>
+            <li>Diretas: "O que é isso?"</li>
+            <li>Indiretas: "Perguntei o que era."</li>
+        </ul>
+
+        <h4>Indefinidos:</h4>
+        <p>Indicam quantidade vaga: alguém, nenhum, todo, outro, muito, bastante, certo</p>
+        <ul>
+            <li><strong>Certo/bastante antes do substantivo:</strong> pronome indefinido</li>
+            <li><strong>Certo/bastante depois do substantivo:</strong> adjetivo</li>
+        </ul>
+
+        <h4>Possessivos:</h4>
+        <p>Meu, teu, seu, nosso, vosso</p>
+        <ul>
+            <li>Concordam com o substantivo: "sua importância" (importância feminina)</li>
+            <li>Pronome oblíquo pode ter valor possessivo: "beijou-me a testa" = minha testa</li>
+        </ul>
+
+        <h4>Demonstrativos:</h4>
+        <ul>
+            <li><strong>Posição no espaço:</strong> este (perto de quem fala), esse (perto de quem ouve), aquele (longe)</li>
+            <li><strong>O, a, os, as</strong> podem ser demonstrativos: "Quero <strong>o</strong> que estiver em promoção"</li>
+            <li><strong>Tal, semelhante, próprio, mesmo</strong> também são demonstrativos</li>
+        </ul>
+
+        <h4>Relativos:</h4>
+        <p>Retomam antecedentes: que, o qual, cujo, quem, onde</p>
+        <ul>
+            <li><strong>Que:</strong> coisa ou pessoa</li>
+            <li><strong>O qual:</strong> desfaz ambiguidades</li>
+            <li><strong>Cujo:</strong> indica posse, vem entre dois substantivos</li>
+            <li><strong>Onde:</strong> só para lugar físico</li>
+            <li><strong>Aonde:</strong> direção a ("em direção a")</li>
+            <li><strong>Donde:</strong> procedência ("de onde")</li>
+        </ul>
+
+        <h4>Pronomes de Tratamento:</h4>
+        <p>Concordância na 3ª pessoa!</p>
+        <ul>
+            <li>Vossa Excelência → <strong>sua</strong> excelência (não "vossa")</li>
+            <li>Vossa Senhoria nomeará <strong>seu</strong> substituto</li>
+        </ul>
+
+        <h4>Pessoais:</h4>
+        <ul>
+            <li><strong>Retos:</strong> sujeito (eu, tu, ele)</li>
+            <li><strong>Oblíquos átonos:</strong> complemento (me, te, o, a, lhe)</li>
+            <li><strong>Oblíquos tônicos:</strong> após preposição (mim, ti, si)</li>
+            <li><strong>Regra especial:</strong> "entre" + reciprocidade = oblíquos tônicos (entre mim e ela)</li>
+        </ul>
+
+        <h4>União com verbos:</h4>
+        <ul>
+            <li>Terminação R/S/Z + o/a → -lo/-la: dissuadir + a = dissuadi-<strong>la</strong></li>
+            <li>Terminação nasal + o/a → -no/-na: viram + a = viram-<strong>na</strong></li>
+            <li>Nós + -nos: corta o S: alistamo-<strong>nos</strong></li>
+        </ul>
+
+        <hr>
+
+        <h3>4. ADVÉRBIO</h3>
+        <p><strong>Definição:</strong> Modifica verbo, adjetivo ou outro advérbio.</p>
+
+        <h4>Circunstâncias principais:</h4>
+        <ul>
+            <li><strong>Modo:</strong> bem, mal, assim, devagar</li>
+            <li><strong>Tempo:</strong> hoje, ontem, amanhã, sempre</li>
+            <li><strong>Lugar:</strong> aqui, ali, lá, dentro</li>
+            <li><strong>Intensidade:</strong> muito, pouco, tão, bastante</li>
+            <li><strong>Negación:</strong> não, nunca, jamais</li>
+            <li><strong>Afirmação:</strong> sim, certamente, realmente</li>
+            <li><strong>Dúvida:</strong> talvez, possivelmente</li>
+        </ul>
+
+        <h4>Cuidado:</h4>
+        <ul>
+            <li>"Muito" + substantivo = <strong>pronome indefinido</strong></li>
+            <li>"Muito" + adjetivo/advérbio = <strong>advérbio</strong></li>
+            <li>"Bastante" pode ser pronome, adjetivo ou advérbio</li>
+        </ul>
+
+        <hr>
+
+        <h3>5. ARTIGO</h3>
+        <p><strong>Definição:</strong> Acompanha/substantiva nomes.</p>
+
+        <h4>Definido (o, a, os, as):</h4>
+        <ul>
+            <li>Referência específica, conhecida</li>
+            <li>"O policial" (já mencionado)</li>
+            <li>Universaliza: "O homem é mortal" = todo homem</li>
+        </ul>
+
+        <h4>Indefinido (um, uma):</h4>
+        <ul>
+            <li>Referência vaga, inespecífica</li>
+            <li>"Um carro qualquer"</li>
+            <li>Intensificação: "Ela tem uma força!"</li>
+            <li>Aproximação: "uns 57 anos"</li>
+        </ul>
+
+        <h4>Regras importantes:</h4>
+        <ul>
+            <li>Artigo + crase: "à" = a (prep) + a (art)</li>
+            <li>Após "todo":
+                <ul>
+                    <li>Toda casa (qualquer casa)</li>
+                    <li>Toda a casa (a casa inteira)</li>
+                </ul>
+            </li>
+            <li>Nomes genéricos não levam artigo: Vou a Paris</li>
+            <li>Nomes determinados levam: Vou à Paris dos meus sonhos</li>
+        </ul>
+
+        <hr>
+
+        <h3>6. NUMERAL</h3>
+        <p><strong>Definição:</strong> Indica quantidade, ordem, fração.</p>
+
+        <h4>Tipos:</h4>
+        <ul>
+            <li><strong>Cardinais:</strong> um, dois, três</li>
+            <li><strong>Ordinais:</strong> primeiro, segundo</li>
+            <li><strong>Fracionários:</strong> um terço, dois quintos</li>
+            <li><strong>Multiplicativos:</strong> dobro, triplo</li>
+        </ul>
+
+        <h4>Observações:</h4>
+        <ul>
+            <li>"Último", "penúltimo" = <strong>adjetivos</strong> (não numerais)</li>
+            <li>Coletivos numéricos: dúzia, década, século</li>
+            <li>"Ambos" e "zero" são numerais</li>
+            <li>Numeral vs Artigo:
+                <ul>
+                    <li>"Um livro" (quantidade exata) = <strong>numeral</strong></li>
+                    <li>"Um dia" (indeterminado) = <strong>artigo</strong></li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h3>7. INTERJEIÇÃO</h3>
+        <p><strong>Definição:</strong> Expressa emoções, estados de espírito.</p>
+        <ul>
+            <li>Invariável</li>
+            <li>Olá! Oba! Ai! Cruzes! Oxalá!</li>
+            <li>Locuções interjetivas: Meu Deus! Ora bolas!</li>
+            <li><strong>Cuidado:</strong> "oh!" = admiração, não surpresa</li>
+        </ul>
+
+        <hr>
+
+        <h3>🎯 DICAS PARA PROVA</h3>
+
+        <h4>Palavras com múltiplas classificações:</h4>
+        <ol>
+            <li><strong>Bastante:</strong>
+                <ul>
+                    <li>Antes do substantivo → pronome indefinido</li>
+                    <li>Depois do substantivo → adjetivo</li>
+                    <li>Com adjetivo/advérbio → advérbio</li>
+                </ul>
+            </li>
+            <li><strong>Certo:</strong>
+                <ul>
+                    <li>Antes do substantivo → pronome indefinido (determinado)</li>
+                    <li>Depois do substantivo → adjetivo (adequado)</li>
+                </ul>
+            </li>
+            <li><strong>O, a, os, as:</strong>
+                <ul>
+                    <li>Com substantivo → artigo</li>
+                    <li>Substituindo substantivo → pronome demonstrativo/pessoal</li>
+                </ul>
+            </li>
+            <li><strong>Mesmo:</strong>
+                <ul>
+                    <li>Como pronome → valor enfático (ele mesmo)</li>
+                    <li>Como advérbio → igualmente (do mesmo modo)</li>
+                    <li>Evitar como substituto de "ele"!</li>
+                </ul>
+            </li>
+        </ol>
+
+        <h4>Troca de posição = mudança de sentido:</h4>
+        <ul>
+            <li>"verdadeiro produto" vs "produto verdadeiro"</li>
+            <li>"simples questão" vs "questão simples"</li>
+            <li>"grande homem" vs "homem grande"</li>
+        </ul>
+
+        <h4>Plurais irregulares que caem:</h4>
+        <ul>
+            <li>Charlatão → charlatões / charlatães</li>
+            <li>Guardião → guardiões / guardiães</li>
+            <li>Cidadão → cidadãos (não "cidadães")</li>
+        </ul>
+
+        <h4>Pronomes relativos:</h4>
+        <ul>
+            <li>Cujo NUNCA leva artigo depois</li>
+            <li>Onde SÓ para lugar físico</li>
+            <li>Que mais comum, o qual para desambiguar</li>
+        </ul>
+
+        <h4>Artigo definido marca:</h4>
+        <ul>
+            <li>Especificidade</li>
+            <li>Familiaridade</li>
+            <li>Universalização</li>
+        </ul>
+
+        <hr>
+
+        <h3>📖 PARA SABER MAIS:</h3>
+        <ol>
+            <li>Manual de Redação Oficial da Presidência (pronomes de tratamento)</li>
+            <li>Vocabulário Ortográfico da Língua Portuguesa (VOLP) - plurais</li>
+            <li>Gramática do Celso Cunha - adjetivos de relação</li>
+        </ol>
+
+        <p>Este resumo cobre <strong>100% do conteúdo necessário</strong> para responder todas as questões da aula e dominar as classes gramaticais para concursos! 🚀</p>
+        </section>
+
         <section class="campoQuestoes">
             <h2>Questões de Português</h1>
             <div id="questoes"></div>
